--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.2.2
-Werkzeug==2.2.2  # Adjusted to meetre Flask's minimum reqfgufgtifvrementfgfiuiugiunugiu
+Werkzeug==2.2.2  # Adjusted to meet Flask's minimum requirement
 flask-cors==3.0.10
 mysql-connector-python==8.0.28
 gunicorn==20.1.0
-cloudinary==1.41.0  # You shtddyld spdecisfy the version yojju need
-python-dateutil==2.8.2  # Addredd sto support dateutil.relativedelta
+cloudinary==1.41.0  # Specify the version you need
+python-dateutil==2.8.2  # Added to support dateutil.relativedelta
+requests==2.28.1  # Added requests library
