--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ mysql-connector-python==8.0.28
 gunicorn==20.1.0
 cloudinary==1.41.0  # Specify the version you need
 python-dateutil==2.8.2  # Added to support dateutil.relativedelta
-requests==2.28.1  # Added requests library
+requests==2.28.1  # Added requRests library
